# MACRO-Strategy

./: .env.example  .gitignore  MACRO_Strategy_Project_Plan.md  Makefile  README.en.md  README.md  docker-compose.jupyter.yml  docker-compose.yml
services/app/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
services/app/migrations/: env.py
services/app/migrations/versions/: 001_initial_schema.py  002_btc_ohlcv_daily.py  003_options_chain_aggregates.py  004_distributions_roc_pct.py  005_indicators_daily.py
services/app/src/api/: main.py
services/app/src/connectors/: binance_perp.py  coinbase_btc.py  deribit_dvol.py  hyperliquid_perp.py  polygon_options.py  sec_edgar.py  yfinance_equity.py  yieldmax.py
services/app/src/core/: config.py  db.py  ingestor.py  rate_limiter.py
services/app/src/core/notifications/: telegram.py
services/app/src/quant/indicators/: btc_vrp.py  mnav.py  realized_vol.py
services/app/src/scripts/: backfill_binance_funding.py  backfill_btc_daily.py  backfill_btc_dvol.py  backfill_equities.py  backfill_hyperliquid_funding.py  backfill_mstr_holdings.py  backfill_polygon_options.py  backfill_yieldmax_msty.py  compute_indicators.py  seed_market_calendar.py
services/app/src/workers/: beat_schedule.py  celery_app.py  tasks.py
services/postgres/init/: 001_extensions.sql
